Update performance-4.html test indicator

--- a/performance-4.html
+++ b/performance-4.html
@@ -1,1 +1,310 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Data Display</title>
+    <style>
+        /* Your existing CSS styles */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            background-color: #9E9C9B;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+        }
+
+        .content-container {
+            width: auto;
+            margin: 0 20px;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 800px;
+            margin-bottom: 20px;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 1px;
+            text-align: left;
+        }
+
+        .bar {
+            height: 15px;
+            width: 200px;
+            margin: 2px 0;
+            border-radius: 5px;
+            transition: width 0.5s ease;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .indicator {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 3px;
+            background-color: darkblue;
+            transform: translateX(-50%);
+        }
+
+        .black-indicator {
+            position: absolute;
+            top: 0;
+            left: 100%;
+            width: 3px;
+            height: 100%;
+            background-color: black;
+        }
+
+        .column1 { width: 200px; }
+        .column2 { width: 200px; }
+        .column3 {
+            width: 200px;
+            background: linear-gradient(to right, red 0%, orange 35%, gold 45%, green 85%);
+            position: relative;
+            height: 20px;
+        }
+        .column4 { width: 200px; }
+
+        .percentage {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            color: white;
+            padding-left: 5px;
+        }
+
+        .column-header {
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .segment {
+            height: 100%;
+            float: left;
+            width: 50px; /* Fixed width for each segment */
+        }
+
+        .segment1 { background-color: red; }
+        .segment2 { background-color: orange; }
+        .segment3 { background-color: gold; }
+        .segment4 { background-color: green; }
+
+        td {
+            vertical-align: middle;
+            text-align: left;
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        th, td {
+            font-family: Arial, sans-serif;
+            border: 2px solid black;
+            padding: 2px;
+        }
+
+        .new-gauge {
+            width: 800px;
+            height: 30px;
+            background: linear-gradient(to right, red 0%, orange 35%, gold 45%, green 85%);
+            position: relative;
+            border: 1px solid black;
+        }
+
+        .new-gauge .indicator {
+            height: 100%;
+            background-color: white;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+        .vertical-line {
+            position: absolute;
+            width: 2px;
+            height: 100%;
+            background-color: darkblue;
+            left: 0; /* This will be overridden by the inline style */
+        }
+    </style>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script>
+        window.onload = function () {
+            const table = document.getElementById('dataTable');
+            let totalPercentage = 0;
+            let rowCount = 0;
+
+            function fetchConfig() {
+                console.log('Fetching config.json...');
+                return fetch('config.json')
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log('Config.json:', data);
+                        const apiKey = data.apiKey;
+                        const spreadsheetId = data.spreadsheetId;
+                        return { apiKey, spreadsheetId };
+                    })
+                    .catch(error => {
+                        console.error('Error fetching config:', error);
+                        throw error; // Propagate the error
+                    });
+            }
+
+            function loadGoogleSheetData(apiKey, spreadsheetId) {
+                console.log('Loading Google Sheet data...');
+                gapi.load('client:auth2', function () {
+                    gapi.client.init({
+                        apiKey: apiKey,
+                        discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+                        scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
+                    }).then(function () {
+                        console.log('Google API initialized successfully.');
+                        gapi.client.sheets.spreadsheets.values.get({
+                            spreadsheetId: spreadsheetId,
+                            range: 'hours2'
+                        }).then(function (response) {
+                            console.log('Google Sheet data loaded successfully:', response);
+                            const values = response.result.values.slice(1);
+                            console.log('Parsed values:', values); // Log parsed values
+                            parseGoogleSheetData(values);
+                        }).catch(function (error) {
+                            console.error('Error loading Google Sheet data:', error);
+                        });
+                    }).catch(function (error) {
+                        console.error('Error initializing gapi:', error);
+                    });
+                });
+            }
+
+            function parseGoogleSheetData(values) {
+                console.log('Parsing Google Sheet data...');
+                table.innerHTML = '';
+
+                const headerRow = document.createElement('tr');
+                const columnHeader1 = document.createElement('th');
+                columnHeader1.textContent = 'Name';
+                columnHeader1.classList.add('column-header');
+                headerRow.appendChild(columnHeader1);
+
+                const columnHeader2 = document.createElement('th');
+                columnHeader2.textContent = 'Billed Hours';
+                columnHeader2.classList.add('column-header');
+                headerRow.appendChild(columnHeader2);
+
+                const columnHeader4 = document.createElement('th');
+                columnHeader4.textContent = 'Bonus Progress';
+                columnHeader4.classList.add('column-header');
+                headerRow.appendChild(columnHeader4);
+
+                const columnHeader3 = document.createElement('th');
+                columnHeader3.textContent = 'YTD Performance';
+                columnHeader3.classList.add('column-header');
+                headerRow.appendChild(columnHeader3);
+
+                table.appendChild(headerRow);
+
+                values.forEach(rowData => {
+                    if (rowData[0]) {
+                        const row = document.createElement('tr');
+                        rowCount++;
+
+                        const cell1 = document.createElement('td');
+                        cell1.textContent = rowData[0];
+                        cell1.classList.add('column1');
+                        row.appendChild(cell1);
+
+                        const cell2 = document.createElement('td');
+                        const bar2 = document.createElement('div');
+                        bar2.className = 'bar';
+                        if (rowData[1] !== null && parseFloat(rowData[1]) !== 0) { // Check if the value is not null or 0
+                            setColorSegments(bar2, parseInt(rowData[1]));
+                            cell2.appendChild(bar2);
+                       
+                        cell2.classList.add('column2');
+                        row.appendChild(cell2);
+
+                        const cell4 = document.createElement('td');
+                        cell4.classList.add('column4');
+                        if (rowData[3] !== null && parseFloat(rowData[3]) !== 0) {
+                            const percentage = parseFloat(rowData[3]).toFixed(2) + '%';
+                            const indicator = document.createElement('div');
+                            indicator.className = 'indicator';
+                            indicator.style.width = percentage;
+                            cell4.appendChild(indicator);
+                            const percentText = document.createElement('span');
+                            percentText.className = 'percentage';
+                            percentText.textContent = percentage;
+                            cell4.appendChild(percentText);
+                        }
+                        row.appendChild(cell4);
+
+                        const cell3 = document.createElement('td');
+                        cell3.classList.add('column3');
+                        if (rowData[2] !== null && parseFloat(rowData[2]) !== 0) {
+                            const bar = document.createElement('div');
+                            bar.className = 'bar';
+                            const value = parseFloat(rowData[2]);
+                            setGradientPosition(bar, value);
+                            cell3.appendChild(bar);
+                        }
+                        row.appendChild(cell3);
+
+                        table.appendChild(row);
+                    }
+                });
+            }
+
+            function setGradientPosition(bar, value) {
+                const indicator = document.createElement('div');
+                indicator.className = 'black-indicator';
+                indicator.style.left = value + '%';
+                bar.appendChild(indicator);
+            }
+
+            // This function creates the colored segments within the bars
+            function setColorSegments(bar, value) {
+                // Clear any existing content
+                bar.innerHTML = '';
+                if (value <= 10.99) {
+                    bar.innerHTML += '<div class="segment segment1"></div>';
+                } else if (value <= 21.99) {
+                    bar.innerHTML += '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>';
+                } else if (value <= 32.99) {
+                    bar.innerHTML += '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>' +
+                                     '<div class="segment segment3"></div>';
+                } else {
+                    bar.innerHTML += '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>' +
+                                     '<div class="segment segment3"></div>' +
+                                     '<div class="segment segment4"></div>';
+                }
+            }
+
+            fetchConfig().then(({ apiKey, spreadsheetId }) => {
+                loadGoogleSheetData(apiKey, spreadsheetId);
+            }).catch(error => {
+                console.error('Failed to start application:', error);
+            });
+        };
+    </script>
+</head>
+<body>
+    <div class="content-container">
+        <table id="dataTable"></table>
+    </div>
+</body>
+</html>
 
