--- a/performance-4.html
+++ b/performance-4.html
@@ -140,166 +140,167 @@
     </style>
     <script src="https://apis.google.com/js/api.js"></script>
     <script>
-        window.onload = function () {
-            const table = document.getElementById('dataTable');
-            let totalPercentage = 0;
-            let rowCount = 0;
+    window.onload = function () {
+        const table = document.getElementById('dataTable');
+        let totalPercentage = 0;
+        let rowCount = 0;
 
-            function fetchConfig() {
-                console.log('Fetching config.json...');
-                return fetch('config.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        console.log('Config.json:', data);
-                        const apiKey = data.apiKey;
-                        const spreadsheetId = data.spreadsheetId;
-                        return { apiKey, spreadsheetId };
-                    })
-                    .catch(error => {
-                        console.error('Error fetching config:', error);
-                        throw error; // Propagate the error
-                    });
-            }
-
-            function loadGoogleSheetData(apiKey, spreadsheetId) {
-                console.log('Loading Google Sheet data...');
-                gapi.load('client:auth2', function () {
-                    gapi.client.init({
-                        apiKey: apiKey,
-                        discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-                        scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
-                    }).then(function () {
-                        console.log('Google API initialized successfully.');
-                        gapi.client.sheets.spreadsheets.values.get({
-                            spreadsheetId: spreadsheetId,
-                            range: 'hours2'
-                        }).then(function (response) {
-                            console.log('Google Sheet data loaded successfully:', response);
-                            const values = response.result.values.slice(1);
-                            console.log('Parsed values:', values); // Log parsed values
-                            parseGoogleSheetData(values);
-                        }).catch(function (error) {
-                            console.error('Error loading Google Sheet data:', error);
-                        });
-                    }).catch(function (error) {
-                        console.error('Error initializing gapi:', error);
-                    });
+        function fetchConfig() {
+            console.log('Fetching config.json...');
+            return fetch('config.json')
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Config.json:', data);
+                    const apiKey = data.apiKey;
+                    const spreadsheetId = data.spreadsheetId;
+                    return { apiKey, spreadsheetId };
+                })
+                .catch(error => {
+                    console.error('Error fetching config:', error);
+                    throw error; // Propagate the error
                 });
-            }
+        }
 
-            function parseGoogleSheetData(values) {
-                console.log('Parsing Google Sheet data...');
-                table.innerHTML = '';
-
-                const headerRow = document.createElement('tr');
-                const columnHeader1 = document.createElement('th');
-                columnHeader1.textContent = 'Name';
-                columnHeader1.classList.add('column-header');
-                headerRow.appendChild(columnHeader1);
-
-                const columnHeader2 = document.createElement('th');
-                columnHeader2.textContent = 'Billed Hours';
-                columnHeader2.classList.add('column-header');
-                headerRow.appendChild(columnHeader2);
-
-                const columnHeader4 = document.createElement('th');
-                columnHeader4.textContent = 'Bonus Progress';
-                columnHeader4.classList.add('column-header');
-                headerRow.appendChild(columnHeader4);
-
-                const columnHeader3 = document.createElement('th');
-                columnHeader3.textContent = 'YTD Performance';
-                columnHeader3.classList.add('column-header');
-                headerRow.appendChild(columnHeader3);
-
-                table.appendChild(headerRow);
-
-                values.forEach(rowData => {
-                    if (rowData[0]) {
-                        const row = document.createElement('tr');
-                        rowCount++;
-
-                        const cell1 = document.createElement('td');
-                        cell1.textContent = rowData[0];
-                        cell1.classList.add('column1');
-                        row.appendChild(cell1);
-
-                        const cell2 = document.createElement('td');
-                        const bar2 = document.createElement('div');
-                        bar2.className = 'bar';
-                        if (rowData[1] !== null && parseFloat(rowData[1]) !== 0) { // Check if the value is not null or 0
-                            setColorSegments(bar2, parseInt(rowData[1]));
-                            cell2.appendChild(bar2);
-                       
-                        cell2.classList.add('column2');
-                        row.appendChild(cell2);
-
-                        const cell4 = document.createElement('td');
-                        cell4.classList.add('column4');
-                        if (rowData[3] !== null && parseFloat(rowData[3]) !== 0) {
-                            const percentage = parseFloat(rowData[3]).toFixed(2) + '%';
-                            const indicator = document.createElement('div');
-                            indicator.className = 'indicator';
-                            indicator.style.width = percentage;
-                            cell4.appendChild(indicator);
-                            const percentText = document.createElement('span');
-                            percentText.className = 'percentage';
-                            percentText.textContent = percentage;
-                            cell4.appendChild(percentText);
-                        }
-                        row.appendChild(cell4);
-
-                        const cell3 = document.createElement('td');
-                        cell3.classList.add('column3');
-                        if (rowData[2] !== null && parseFloat(rowData[2]) !== 0) {
-                            const bar = document.createElement('div');
-                            bar.className = 'bar';
-                            const value = parseFloat(rowData[2]);
-                            setGradientPosition(bar, value);
-                            cell3.appendChild(bar);
-                        }
-                        row.appendChild(cell3);
-
-                        table.appendChild(row);
-                    }
-                }
-            }
-
-            function setGradientPosition(bar, value) {
-                const indicator = document.createElement('div');
-                indicator.className = 'black-indicator';
-                indicator.style.left = value + '%';
-                bar.appendChild(indicator);
-            }
-
-            // This function creates the colored segments within the bars
-            function setColorSegments(bar, value) {
-                // Clear any existing content
-                bar.innerHTML = '';
-                if (value <= 10.99) {
-                    bar.innerHTML += '<div class="segment segment1"></div>';
-                } else if (value <= 21.99) {
-                    bar.innerHTML += '<div class="segment segment1"></div>' +
-                                     '<div class="segment segment2"></div>';
-                } else if (value <= 32.99) {
-                    bar.innerHTML += '<div class="segment segment1"></div>' +
-                                     '<div class="segment segment2"></div>' +
-                                     '<div class="segment segment3"></div>';
-                } else {
-                    bar.innerHTML += '<div class="segment segment1"></div>' +
-                                     '<div class="segment segment2"></div>' +
-                                     '<div class="segment segment3"></div>' +
-                                     '<div class="segment segment4"></div>';
-                }
-            }
-
-            fetchConfig().then(({ apiKey, spreadsheetId }) => {
-                loadGoogleSheetData(apiKey, spreadsheetId);
-            }).catch(error => {
-                console.error('Failed to start application:', error);
+        function loadGoogleSheetData(apiKey, spreadsheetId) {
+            console.log('Loading Google Sheet data...');
+            gapi.load('client:auth2', function () {
+                gapi.client.init({
+                    apiKey: apiKey,
+                    discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+                    scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
+                }).then(function () {
+                    console.log('Google API initialized successfully.');
+                    gapi.client.sheets.spreadsheets.values.get({
+                        spreadsheetId: spreadsheetId,
+                        range: 'hours2'
+                    }).then(function (response) {
+                        console.log('Google Sheet data loaded successfully:', response);
+                        const values = response.result.values.slice(1);
+                        console.log('Parsed values:', values); // Log parsed values
+                        parseGoogleSheetData(values);
+                    }).catch(function (error) {
+                        console.error('Error loading Google Sheet data:', error);
+                    });
+                }).catch(function (error) {
+                    console.error('Error initializing gapi:', error);
+                });
             });
-        };
-    </script>
+        }
+
+        function parseGoogleSheetData(values) {
+            console.log('Parsing Google Sheet data...');
+            table.innerHTML = '';
+
+            const headerRow = document.createElement('tr');
+            const columnHeader1 = document.createElement('th');
+            columnHeader1.textContent = 'Name';
+            columnHeader1.classList.add('column-header');
+            headerRow.appendChild(columnHeader1);
+
+            const columnHeader2 = document.createElement('th');
+            columnHeader2.textContent = 'Billed Hours';
+            columnHeader2.classList.add('column-header');
+            headerRow.appendChild(columnHeader2);
+
+            const columnHeader4 = document.createElement('th');
+            columnHeader4.textContent = 'Bonus Progress';
+            columnHeader4.classList.add('column-header');
+            headerRow.appendChild(columnHeader4);
+
+            const columnHeader3 = document.createElement('th');
+            columnHeader3.textContent = 'YTD Performance';
+            columnHeader3.classList.add('column-header');
+            headerRow.appendChild(columnHeader3);
+
+            table.appendChild(headerRow);
+
+            values.forEach(rowData => {
+                if (rowData[0]) {
+                    const row = document.createElement('tr');
+                    rowCount++;
+
+                    const cell1 = document.createElement('td');
+                    cell1.textContent = rowData[0];
+                    cell1.classList.add('column1');
+                    row.appendChild(cell1);
+
+                    const cell2 = document.createElement('td');
+                    const bar2 = document.createElement('div');
+                    bar2.className = 'bar';
+                    if (rowData[1] !== null && parseFloat(rowData[1]) !== 0) { // Check if the value is not null or 0
+                        setColorSegments(bar2, parseInt(rowData[1]));
+                        cell2.appendChild(bar2);
+                    }
+                    cell2.classList.add('column2');
+                    row.appendChild(cell2);
+
+                    const cell4 = document.createElement('td');
+                    cell4.classList.add('column4');
+                    if (rowData[3] !== null && parseFloat(rowData[3]) !== 0) {
+                        const percentage = parseFloat(rowData[3]).toFixed(2) + '%';
+                        const indicator = document.createElement('div');
+                        indicator.className = 'indicator';
+                        indicator.style.width = percentage;
+                        cell4.appendChild(indicator);
+                        const percentText = document.createElement('span');
+                        percentText.className = 'percentage';
+                        percentText.textContent = percentage;
+                        cell4.appendChild(percentText);
+                    }
+                    row.appendChild(cell4);
+
+                    const cell3 = document.createElement('td');
+                    cell3.classList.add('column3');
+                    if (rowData[2] !== null && parseFloat(rowData[2]) !== 0) {
+                        const bar = document.createElement('div');
+                        bar.className = 'bar';
+                        const value = parseFloat(rowData[2]);
+                        setGradientPosition(bar, value);
+                        cell3.appendChild(bar);
+                    }
+                    row.appendChild(cell3);
+
+                    table.appendChild(row);
+                }
+            });
+        } // <-- Added missing closing brace here
+
+        function setGradientPosition(bar, value) {
+            const indicator = document.createElement('div');
+            indicator.className = 'black-indicator';
+            indicator.style.left = value + '%';
+            bar.appendChild(indicator);
+        }
+
+        // This function creates the colored segments within the bars
+        function setColorSegments(bar, value) {
+            // Clear any existing content
+            bar.innerHTML = '';
+            if (value <= 10.99) {
+                bar.innerHTML += '<div class="segment segment1"></div>';
+            } else if (value <= 21.99) {
+                bar.innerHTML += '<div class="segment segment1"></div>' +
+                                 '<div class="segment segment2"></div>';
+            } else if (value <= 32.99) {
+                bar.innerHTML += '<div class="segment segment1"></div>' +
+                                 '<div class="segment segment2"></div>' +
+                                 '<div class="segment segment3"></div>';
+            } else {
+                bar.innerHTML += '<div class="segment segment1"></div>' +
+                                 '<div class="segment segment2"></div>' +
+                                 '<div class="segment segment3"></div>' +
+                                 '<div class="segment segment4"></div>';
+            }
+        }
+
+        fetchConfig().then(({ apiKey, spreadsheetId }) => {
+            loadGoogleSheetData(apiKey, spreadsheetId);
+        }).catch(error => {
+            console.error('Failed to start application:', error);
+        });
+    };
+</script>
+
 </head>
 <body>
     <div class="content-container">
