--- a/pdi_perf-3.html
+++ b/pdi_perf-3.html
@@ -209,7 +209,7 @@
                 headerRow.appendChild(columnHeader4);
 
                 const columnHeader3 = document.createElement('th');
-                columnHeader3.textContent = 'YTD Performance';
+                columnHeader3.textContent = 'YTD Efficiency';
                 columnHeader3.classList.add('column-header');
                 headerRow.appendChild(columnHeader3);
 
@@ -341,10 +341,10 @@
     <div class="content-container">
         <p><b>Technician Progress</b></p>
         <table id="dataTable"></table>
-        <p>Billed Hours: Red = 1 - 11 hours  Orange = 12 - 22 hours Gold = 23 - 33  Green = 33+ hours
+        <p>Billed Hours: Red = 1 - 11 hours  Orange = 12 - 22 hours Yellow = 23 - 33  Green = 33+ hours
         <br>Bonus Progress: Percent to goal Green = 95%
-        <br>YTD Performance is the percentage of Billed Time to On-Premise time</p>
-        <p><b>Average Shop Performance:</b></p>
+        <br>YTD Efficiency is the percentage of Billed Time to On-Premise time</p>
+        <p><b>Average Shop Efficiency:</b></p>
         <div id="averageGaugeContainer">
             <div id="averageGauge" class="new-gauge">
                 <div id="averagePercentageDisplay" class="percentage"></div>
