--- a/performance-3.html
+++ b/performance-3.html
@@ -344,7 +344,7 @@
         <p>Billed Hours: Red = 1 - 11 hours  Orange = 12 - 22 hours Yellow = 23 - 33  Green = 33+ hours
         <br>Bonus Progress: Percent to goal Green = 95%
         <br>YTD Efficiency is the percentage of Billed Time to On-Premise time</p>
-        <p><b>Average Shop Performance:</b></p>
+        <p><b>Average Shop Efficiency:</b></p>
         <div id="averageGaugeContainer">
             <div id="averageGauge" class="new-gauge">
                 <div id="averagePercentageDisplay" class="percentage"></div>
