--- a/countdown.html
+++ b/countdown.html
@@ -41,8 +41,8 @@
       const now = new Date();
       let endTime = new Date();
 
-      // Set endTime to 6:00 PM of the current day
-      endTime.setHours(18, 0, 0, 0); // 18:00:00.000
+      // Set endTime to 18:00 for 6:00 PM of the current day
+      endTime.setHours(17, 30, 0, 0); // 18:00:00.000
 
       // If it's already past 6:00 PM, set the target to the next day
       if (now > endTime) {
