--- a/dashboard-srv.html
+++ b/dashboard-srv.html
@@ -92,14 +92,14 @@
                 <iframe src="countdown.html"></iframe>
             </div>
             <div class="half-width-iframe">
-                <iframe src="safety1.html"></iframe>
+                <iframe src="safety.html"></iframe>
             </div>
         </div>
         <div class="iframe-container">
-            <iframe src="text_rotator-3.html"></iframe>
+            <iframe src="text_rotator.html"></iframe>
         </div>
         <div class="iframe-container">
-            <iframe src="gauge-2.html"></iframe>
+            <iframe src="gauge.html"></iframe>
         </div>
     </div>
 </body>
