--- a/weather.html
+++ b/weather.html
@@ -56,7 +56,7 @@
 
     <script>
         const apiBase = "https://api.weather.gov";
-        const location = "39.7456,-97.0892"; // Replace with the desired latitude and longitude
+        const location = "40.8759,81.4023"; // Replace with the desired latitude and longitude 40.8759° N, 81.4023° W
 
         async function fetchForecast() {
             try {
