--- a/performance.html
+++ b/performance.html
@@ -81,7 +81,10 @@
             transform: translateY(-50%);
             color: white;
             padding-left: 5px;
+            font-weight: bold;
+            font-size: 14px;
         }
+
 
         .column-header {
             text-align: center;
@@ -321,8 +324,15 @@
                                      '<div class="segment segment2"></div>' +
                                      '<div class="segment segment3"></div>' +
                                      '<div class="segment segment4"></div>';
+            
+                    // Create a percentage label and append it to the bar **added
+                    const percentageLabel = document.createElement('div');
+                    percentageLabel.className = 'percentage';
+                    percentageLabel.textContent = (value * 100).toFixed(2) + '%';
+                    bar.appendChild(percentageLabel);
                 }
             }
+
 
 
             fetchConfig()
