--- a/performance.html
+++ b/performance.html
@@ -81,8 +81,8 @@
             transform: translateY(-50%);
             color: white;
             padding-left: 5px;
-            font-weight: bold;
-            font-size: 11px;
+            font-weight: normal;
+            font-size: 10px;
         }
 
 
