--- a/pdi_performance.html
+++ b/pdi_performance.html
@@ -81,8 +81,9 @@
             transform: translateY(-50%);
             color: white;
             padding-left: 5px;
+            font-weight: normal;
+            font-size: 10.5px;
         }
-
         .column-header {
             text-align: center;
             font-weight: bold;
