--- a/pdi_performance.html
+++ b/pdi_performance.html
@@ -307,10 +307,10 @@
                                      '<div class="segment segment4"></div>';
                 }
             }
-            function setColorSegmentsForGoalProgress(bar, value) {
-                if (value <= 0.25) {
+             function setColorSegmentsForGoalProgress(bar, value) {
+                if (value <= 0.32) {
                     bar.innerHTML = '<div class="segment segment1"></div>';
-                } else if (value <= 0.50) {
+                } else if (value <= 0.64) {
                     bar.innerHTML = '<div class="segment segment1"></div>' +
                                      '<div class="segment segment2"></div>';
                 } else if (value <= 0.94) {
@@ -322,8 +322,15 @@
                                      '<div class="segment segment2"></div>' +
                                      '<div class="segment segment3"></div>' +
                                      '<div class="segment segment4"></div>';
+            
+                    // Create a percentage label and append it to the bar **added
+                    const percentageLabel = document.createElement('div');
+                    percentageLabel.className = 'percentage';
+                    percentageLabel.textContent = (value * 100).toFixed(2) + '%';
+                    bar.appendChild(percentageLabel);
                 }
             }
+
 
 
             fetchConfig()
