--- a/pdi_performance.html
+++ b/pdi_performance.html
@@ -353,7 +353,7 @@
         <p><b>Technician Progress</b></p>
         <table id="dataTable"></table>
         <p>Billed Hours: Red = 1 - 11 hours  Orange = 12 - 22 hours Yellow = 23 - 33  Green = 33+ hours
-        <br>Bonus Progress: Percent to goal Green = 95%
+        <br>Bonus Progress: Percentage is displayed at 90% - Green at 95%
         <br>YTD Efficiency is the percentage of Billed Time to On-Premise time</p>
         <p><b>Average Shop Efficiency:</b></p>
         <div id="averageGaugeContainer">
