--- a/svc-special.html
+++ b/svc-special.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpage Framework</title>
+    <title>GRV Service Specials</title>
     <style>
         body {
             margin: 0;
