Change PDI title

--- a/dashboardpdi.html
+++ b/dashboardpdi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service Dashboard</title>
+    <title>GT9 - PDI Dashboard</title>
     <style>
         html, body {
             height: 100%;
